--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -6,6 +6,77 @@
     &__wrap
         display: flex
         justify-content: center
+    &__wrapper
+        display: flex
+        margin-top: 190px
+        height: 570px
+        align-items: center
+    &__content
+        max-width: 540px
+        height: 296px
+        display: flex
+        flex-direction: column
+    &__title
+        font-family: Open Sans Condensed
+        font-weight: bold
+        font-size: 64px
+        line-height: 87px
+        letter-spacing: 0.1em
+        text-transform: uppercase
+    &__text
+        font-family: Open Sans
+        font-size: 14px
+        line-height: 150%
+        margin: 50px 0
+    &__button
+        font-family: Open Sans Condensed
+        font-weight: bold
+        font-size: 18px
+        line-height: 25px
+        display: flex
+        align-items: center
+        justify-content: center
+        letter-spacing: 0.1em
+        text-transform: uppercase
+        color: #fff
+        text-decoration: none
+        border: none
+        background: #D1A954
+        width: 160px
+        height: 50px
+        padding: 0
+    &__slider-item
+        width: 100%
+        height: 510px
+        padding-right: 20px
+    &__slider-img
+        position: relative
+        width: 350px
+        height: 490px
+        object-fit: cover
+        object-position: center
+    &__slider-img::before
+        content: ""
+        position: absolute
+        z-index: 2
+        top: 20px
+        left: 20px
+        display: block
+        width: 100%
+        height: 100%
+        background: linear-gradient(0deg, rgba(209, 169, 84, 0.85), rgba(209, 169, 84, 0.85))
+    &__img-primary
+        position: relative
+        z-index: 5
+        width: 100%
+        height: auto
+    &__img-secondary
+        position: absolute
+        z-index: 1
+        top: 20px
+        left: 20px
+        width: 100%
+        height: auto
 .menu
     display: flex
     align-items: center
@@ -78,6 +149,8 @@
     margin-bottom: 86px
 .instagram
     margin-top: 250px
+
+
 
 
         
