--- a/css/style.css
+++ b/css/style.css
@@ -342,7 +342,6 @@ p {
   .header__wrapper {
     display: flex;
     margin-top: 190px;
-    height: 570px;
     align-items: center; }
   .header__content {
     max-width: 540px;
@@ -366,18 +365,15 @@ p {
     font-weight: bold;
     font-size: 18px;
     line-height: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: #fff;
     text-decoration: none;
     border: none;
     background: #D1A954;
-    width: 160px;
-    height: 50px;
-    padding: 0; }
+    max-width: 160px;
+    padding: 12px 47px; }
   .header__slider-item {
     width: 100%;
     height: 510px;
@@ -487,3 +483,36 @@ p {
 
 .instagram {
   margin-top: 250px; }
+
+.slick-list {
+  overflow: hidden; }
+
+.slick-track {
+  display: flex; }
+
+.header__slider {
+  position: relative; }
+
+.header__slider .slick-arrow {
+  position: absolute;
+  top: 100%;
+  margin: 35px 0 0 0;
+  z-index: 10;
+  font-size: 0;
+  width: 108px;
+  height: 25px;
+  border: none; }
+
+.header__slider .slick-arrow.slick-prev {
+  left: 0;
+  background: url("../img/prev.png") 0 0/100% no-repeat;
+  cursor: pointer; }
+
+.header__slider .slick-arrow.slick-next {
+  right: 0;
+  background: url("../img/next.png") 0 0/100% no-repeat;
+  cursor: pointer; }
+
+.header__wrap-slider {
+  width: 370px;
+  margin: 0 auto; }
