--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,8 @@ html {
 
 body {
   font-family: 'PT Sans', sans-serif;
-  font-size: 1rem; }
+  font-size: 1rem;
+  background-color: #333333; }
 
 img {
   max-width: 100%; }
@@ -449,7 +450,7 @@ p {
   top: 0;
   left: 0;
   bottom: 0;
-  width: 150px;
+  max-width: 150px;
   z-index: 999;
   overflow: hidden; }
   .social__title {
@@ -516,3 +517,119 @@ p {
 .header__wrap-slider {
   width: 370px;
   margin: 0 auto; }
+
+.theater {
+  display: flex;
+  justify-content: center;
+  margin-top: 150px; }
+  .theater__title {
+    text-align: center;
+    font-family: Open Sans Condensed;
+    font-weight: 300;
+    font-size: 48px;
+    line-height: 65px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 100px; }
+  .theater__wrap {
+    display: flex; }
+  .theater__description {
+    display: flex;
+    flex-direction: column;
+    max-width: 445px; }
+  .theater__heading {
+    font-family: Open Sans Condensed;
+    font-weight: bold;
+    font-size: 21px;
+    line-height: 29px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin: 0 0 40px 0; }
+  .theater__text {
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 150%;
+    color: #FFFFFF; }
+  .theater__icon {
+    max-width: 255px;
+    margin: 0 30px; }
+  .theater__block {
+    display: flex;
+    flex-direction: column; }
+  .theater__chair-icon {
+    max-width: 70px;
+    height: 100%; }
+  .theater__chair-text {
+    font-family: Open Sans Condensed;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 22px;
+    letter-spacing: 0.05em;
+    color: #fff;
+    margin-top: 15px; }
+  .theater__theater-icon {
+    max-width: 70px;
+    height: 100%;
+    margin-top: 25px; }
+  .theater__img {
+    object-fit: contain;
+    height: 100%; }
+
+.stars {
+  display: flex;
+  justify-content: center;
+  margin-top: 150px; }
+  .stars__wrap {
+    display: flex;
+    background: url("../img/stars-img.png") no-repeat center/cover;
+    height: 550px; }
+  .stars__years {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-left: 150px;
+    margin-right: 103px; }
+  .stars__year {
+    font-family: Open Sans Condensed;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 72px;
+    line-height: 98px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #D1A954; }
+  .stars__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+  .stars__star {
+    margin-right: 25px;
+    margin-bottom: 25px; }
+  .stars__description {
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 150%;
+    color: #FFFFFF; }
+
+.partners {
+  display: flex;
+  justify-content: center;
+  margin-top: 150px; }
+  .partners__title {
+    font-family: Open Sans Condensed;
+    font-weight: 300;
+    font-size: 48px;
+    line-height: 65px;
+    text-align: center;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #fff;
+    margin-bottom: 100px; }
+
+.partners__slider {
+  position: relative; }
