--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -116,7 +116,7 @@
     top: 0
     left: 0
     bottom: 0
-    width: 150px
+    max-width: 150px
     z-index: 999
     overflow: hidden
     &__title
