--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -28,6 +28,7 @@
         letter-spacing: 0.05em
         text-transform: uppercase
         color: #FFFFFF
+        margin-bottom: 25px
     &__wrap
         max-width: 730px
     &__block-one
@@ -37,8 +38,6 @@
     &__input-group
         display: flex
         flex-direction: column
-    ::placeholder
-        color: #989898
     &__input-group--one
         margin-right: 30px
     &__input
@@ -90,4 +89,9 @@
         line-height: 150%
         text-align: right
         color: #989898
-    
+::placeholder
+        color: #989898
+        font-family: Open Sans
+        font-weight: 600
+        font-size: 12px
+        line-height: 150%
