--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -92,7 +92,7 @@
         line-height: 25px
         letter-spacing: 0.1em
         text-transform: uppercase
-        // margin-right: 63px
+        margin-right: 63px
 .contact
     border-bottom: 2px solid #D1A954
     &__phone
