--- a/sass/templates/_theater.sass
+++ b/sass/templates/_theater.sass
@@ -37,6 +37,7 @@
     &__icon
         max-width: 255px
         margin: 0 30px 
+        width: 100%
     &__block
         display: flex
         flex-direction: column
@@ -55,6 +56,6 @@
         max-width: 70px
         height: 100%
         margin-top: 25px
-    &__img
+    &__image
         object-fit: contain
         height: 100%
