--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,17 @@
+@font-face {
+  font-family: 'Open Sans';
+  src: url("../fonts/OpenSans/OpenSans-Regular.woff") format("woff"), url("../fonts/OpenSans/OpenSans-Regular.woff2") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: wrap; }
+
+@font-face {
+  font-family: 'Open Sans Condensed';
+  src: url("../fonts/OpenSansCondensed/OpenSansCondensed-Light.woff") format("woff"), url("../fonts/OpenSansCondensed/OpenSansCondensed-Light.woff2") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: wrap; }
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -316,7 +330,7 @@ html {
   font-size: 14px; }
 
 body {
-  font-family: 'PT Sans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 1rem;
   background-color: #333333; }
 
@@ -424,7 +438,8 @@ p {
     font-size: 18px;
     line-height: 25px;
     letter-spacing: 0.1em;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    margin-right: 63px; }
 
 .contact {
   border-bottom: 2px solid #D1A954; }
@@ -556,7 +571,8 @@ p {
     color: #FFFFFF; }
   .theater__icon {
     max-width: 255px;
-    margin: 0 30px; }
+    margin: 0 30px;
+    width: 100%; }
   .theater__block {
     display: flex;
     flex-direction: column; }
@@ -575,7 +591,7 @@ p {
     max-width: 70px;
     height: 100%;
     margin-top: 25px; }
-  .theater__img {
+  .theater__image {
     object-fit: contain;
     height: 100%; }
 
@@ -592,7 +608,7 @@ p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-left: 150px;
+    margin-left: 190px;
     margin-right: 103px; }
   .stars__year {
     font-family: Open Sans Condensed;
@@ -614,7 +630,8 @@ p {
     font-weight: bold;
     font-size: 36px;
     line-height: 150%;
-    color: #FFFFFF; }
+    color: #FFFFFF;
+    max-width: 540px; }
 
 .partners {
   display: flex;
@@ -666,7 +683,8 @@ p {
     line-height: 22px;
     letter-spacing: 0.05em;
     text-transform: uppercase;
-    color: #FFFFFF; }
+    color: #FFFFFF;
+    margin-bottom: 25px; }
   .footer__wrap {
     max-width: 730px; }
   .footer__block-one {
@@ -675,8 +693,6 @@ p {
   .footer__input-group {
     display: flex;
     flex-direction: column; }
-  .footer ::placeholder {
-    color: #989898; }
   .footer__input-group--one {
     margin-right: 30px; }
   .footer__input {
@@ -728,3 +744,10 @@ p {
     line-height: 150%;
     text-align: right;
     color: #989898; }
+
+::placeholder {
+  color: #989898;
+  font-family: Open Sans;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 150%; }
