--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -3,7 +3,7 @@
 html
   font-size: 14px
 body
-  font-family: 'PT Sans', sans-serif
+  font-family: 'Open Sans', sans-serif
   font-size: 1rem
   background-color: #333333
 img
