--- a/sass/templates/_partners.sass
+++ b/sass/templates/_partners.sass
@@ -3,7 +3,7 @@
     justify-content: center
     margin-top: 150px
     &__title
-        font-family: Open Sans Condensed
+        font-family: Open Sans Condensed Light
         font-weight: 300
         font-size: 48px
         line-height: 65px
