--- a/sass/templates/_stars.sass
+++ b/sass/templates/_stars.sass
@@ -14,7 +14,7 @@
         margin-left: 190px
         margin-right: 103px
     &__year
-        font-family: Open Sans Condensed
+        font-family: Open Sans Condensed Bold
         font-style: normal
         font-weight: bold
         font-size: 72px
