--- a/sass/templates/_theater.sass
+++ b/sass/templates/_theater.sass
@@ -4,7 +4,7 @@
     margin-top: 150px
     &__title
         text-align: center
-        font-family: Open Sans Condensed
+        font-family: Open Sans Condensed Light
         font-weight: 300
         font-size: 48px
         line-height: 65px
@@ -19,7 +19,7 @@
         flex-direction: column
         max-width: 445px
     &__heading
-        font-family: Open Sans Condensed
+        font-family: Open Sans Condensed Bold
         font-weight: bold
         font-size: 21px
         line-height: 29px
@@ -45,7 +45,7 @@
         max-width: 70px
         height: 100%
     &__chair-text
-        font-family: Open Sans Condensed
+        font-family: Open Sans Condensed Bold
         font-weight: bold
         font-size: 16px
         line-height: 22px
