--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -3,7 +3,7 @@
     justify-content: center
     margin-top: 120px
     &__title
-        font-family: Open Sans Condensed
+        font-family: Open Sans Condensed Light
         font-weight: 300
         font-size: 48px
         line-height: 65px
@@ -21,7 +21,7 @@
         max-width: 255px
         margin-right: 125px
     &__phone
-        font-family: Open Sans Condensed
+        font-family: Open Sans Condensed Bold
         font-weight: bold
         font-size: 16px
         line-height: 22px
@@ -62,7 +62,7 @@
         line-height: 150%
         color: #989898
     &__btn
-        font-family: Open Sans Condensed
+        font-family: Open Sans Condensed Bold
         font-style: normal
         font-weight: bold
         font-size: 18px
