--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -16,7 +16,7 @@
         display: flex
         flex-direction: column
     &__title
-        font-family: Open Sans Condensed
+        font-family: Open Sans Condensed Bold
         font-weight: bold
         font-size: 64px
         line-height: 87px
@@ -28,7 +28,7 @@
         line-height: 150%
         margin: 50px 0
     &__button
-        font-family: Open Sans Condensed
+        font-family: Open Sans Condensed Bold
         font-weight: bold
         font-size: 18px
         line-height: 25px
@@ -86,7 +86,7 @@
     &__item
         text-decoration: none
         color: #fff
-        font-family: Open Sans Condensed
+        font-family: Open Sans Condensed Bold
         font-weight: bold
         font-size: 18px
         line-height: 25px
@@ -98,7 +98,7 @@
     &__phone
         text-decoration: none
         color: #fff
-        font-family: Open Sans Condensed
+        font-family: Open Sans Condensed Bold
         font-weight: bold
         font-size: 16px
         line-height: 22px
@@ -120,7 +120,7 @@
     z-index: 999
     overflow: hidden
     &__title
-        font-family: Open Sans Condensed
+        font-family: Open Sans Condensed Bold
         font-weight: bold
         font-size: 18px
         line-height: 25px
