--- a/css/style.css
+++ b/css/style.css
@@ -711,7 +711,9 @@ p {
     height: 35px;
     padding: 0 0 0 15px;
     border: 1px solid #616161;
-    background: #444444; }
+    background: #444444;
+    outline: none;
+    color: #fff; }
   .footer__input-top {
     margin-bottom: 30px; }
   .footer__input--primary {
