--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -46,6 +46,8 @@
         padding: 0 0 0 15px
         border: 1px solid #616161
         background: #444444
+        outline: none
+        color: #fff
     &__input-top
         margin-bottom: 30px
     &__input--primary
