--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,8 @@ p {
     border: none;
     background: #D1A954;
     max-width: 160px;
-    padding: 12px 47px; }
+    padding: 12px 47px;
+    cursor: pointer; }
   .header__slider-item {
     width: 100%;
     height: 510px;
@@ -598,17 +599,41 @@ p {
     max-width: 70px;
     height: 100%;
     margin-top: 25px; }
-  .theater__image {
-    object-fit: contain;
-    height: 100%; }
 
 .color {
   color: #D1A954; }
 
+.staging {
+  margin: 150px 0 150px; }
+  .staging__title {
+    font-family: Open Sans Condensed Light;
+    font-weight: 300;
+    font-size: 48px;
+    line-height: 65px;
+    text-align: center;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 100px; }
+  .staging__wrap {
+    margin-left: 150px;
+    max-width: 1750px; }
+
+.slick-list {
+  overflow: hidden; }
+
+.slick-track {
+  display: flex; }
+
+.staging__slider {
+  position: relative; }
+
+.staging__item {
+  height: 550px; }
+
 .stars {
   display: flex;
-  justify-content: center;
-  margin-top: 150px; }
+  justify-content: center; }
   .stars__wrap {
     display: flex;
     background: url("../img/stars-img.png") no-repeat center/cover;
