--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -32,9 +32,6 @@
         font-weight: bold
         font-size: 18px
         line-height: 25px
-        // display: flex
-        // align-items: center
-        // justify-content: center
         text-align: center
         letter-spacing: 0.1em
         text-transform: uppercase
@@ -44,6 +41,7 @@
         background: #D1A954
         max-width: 160px
         padding: 12px 47px
+        cursor: pointer
     &__slider-item
         width: 100%
         height: 510px
