--- a/css/style.css
+++ b/css/style.css
@@ -629,7 +629,19 @@ p {
   position: relative; }
 
 .staging__item {
-  height: 550px; }
+  max-width: 442px;
+  height: 550px;
+  position: relative; }
+
+.staging__item::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  transition: all 1s ease;
+  background: linear-gradient(0deg, rgba(51, 51, 51, 0.65), rgba(51, 51, 51, 0.65)); }
 
 .stars {
   display: flex;
