--- a/sass/templates/_staging.sass
+++ b/sass/templates/_staging.sass
@@ -20,4 +20,15 @@
 .staging__slider
     position: relative
 .staging__item
+    max-width: 442px
     height: 550px
+    position: relative
+.staging__item::after
+    content: ''
+    position: absolute
+    top: 0
+    left: 0
+    height: 100%
+    width: 100%
+    transition: all 1s ease
+    background: linear-gradient(0deg, rgba(51, 51, 51, 0.65), rgba(51, 51, 51, 0.65))
