--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -9,12 +9,12 @@
     &__wrapper
         display: flex
         margin-top: 190px
-        align-items: center
     &__content
         max-width: 540px
         height: 296px
         display: flex
         flex-direction: column
+        margin-top: 8.5rem
     &__title
         font-family: Open Sans Condensed Bold
         font-weight: bold
@@ -26,7 +26,8 @@
         font-family: Open Sans
         font-size: 14px
         line-height: 150%
-        margin: 50px 0
+        margin-top: 2.2rem
+        margin-bottom: 3.3rem
     &__button
         font-family: Open Sans Condensed Bold
         font-weight: bold
@@ -90,7 +91,7 @@
         line-height: 25px
         letter-spacing: 0.1em
         text-transform: uppercase
-        margin-right: 63px
+        margin-right: 62px
 .contact
     border-bottom: 2px solid #D1A954
     &__phone
@@ -143,7 +144,7 @@
     &__icon:hover
         filter: invert(67%) sepia(16%) saturate(1120%) hue-rotate(3deg) brightness(96%) contrast(104%)
 .youtube
-    margin-bottom: 86px
+    margin-bottom: 8.3rem
 .instagram
     margin-top: 250px
 
@@ -173,7 +174,7 @@
     cursor: pointer
 .header__wrap-slider
     width: 370px
-    margin: 0 auto
+    margin-left: 9rem
 
 
 
