--- a/sass/templates/_staging.sass
+++ b/sass/templates/_staging.sass
@@ -1,5 +1,5 @@
 .staging
-    margin: 150px 0 150px
+    margin: 144px 0 150px
     &__title
         font-family: Open Sans Condensed Light
         font-weight: 300
@@ -30,5 +30,65 @@
     left: 0
     height: 100%
     width: 100%
-    transition: all 1s ease
+    transition: 0.8s
     background: linear-gradient(0deg, rgba(51, 51, 51, 0.65), rgba(51, 51, 51, 0.65))
+.staging__item:hover::after
+    display: none
+.staging__link
+    background: #D1A954 url(../img/search.svg) center no-repeat
+    height: 100px
+    width: 100px
+    border-radius: 50%
+    margin: 0 auto
+    display: inline-block
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50px, -50px)
+    opacity: 0
+    visibility: hidden
+    transition: 0.8s
+    cursor: pointer
+.staging__item:hover .staging__link
+    visibility: visible
+    opacity: 1
+.staging__heading
+    font-family: Open Sans Condensed Bold
+    font-weight: bold
+    font-size: 24px
+    line-height: 33px
+    letter-spacing: 0.05em
+    text-transform: uppercase
+    color: #FFFFFF
+    position: absolute
+    top: 40px
+    left: 40px
+    z-index: 4
+    opacity: 1
+    visibility: visible
+.staging__subtitle
+    font-family: Open Sans Condensed Bold
+    font-weight: bold
+    font-size: 18px
+    line-height: 25px
+    letter-spacing: 0.1em
+    text-transform: uppercase
+    color: #FFFFFF
+    transform: rotate(-90deg)
+    position: absolute
+    bottom: 80px
+    z-index: 4
+    opacity: 1
+    visibility: visible
+.staging__item:hover .staging__subtitle
+    opacity: 0
+    visibility: hidden
+.staging__item:hover .staging__heading
+    opacity: 0
+    visibility: hidden
+
+
+
+
+
+
