--- a/sass/templates/_stars.sass
+++ b/sass/templates/_stars.sass
@@ -25,8 +25,9 @@
         display: flex
         flex-direction: column
         justify-content: center
+        margin-left: 1.5rem
     &__star
-        margin-right: 25px
+        margin-right: 21px
         margin-bottom: 25px
     &__description
         font-weight: bold
