--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -20,6 +20,12 @@
         flex-direction: column
         max-width: 255px
         margin-right: 134px
+    &__phone-tel
+        display: flex
+        flex-direction: column
+    &__phone-text
+        display: flex
+        flex-direction: column
     &__phone
         font-family: Open Sans Condensed Bold
         font-weight: bold
