--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -155,9 +155,9 @@
             margin-left: 99px
     .partners
         margin-top: 90px
-    .slick-list
+    .partners .slick-list
         padding: 0!important
-    .slick-slide
+    .partners .slick-slide
         max-width: 200px
         margin-right: 78px
     .footer
@@ -166,6 +166,8 @@
         &__title
             margin-bottom: 60px
         &__maecenas
+            margin: 0
+        &__dev
             margin: 0
             
 
