--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -176,6 +176,88 @@
     width: 370px
     margin-left: 9rem
 
+//бургер
+.burger-menu
+    width: 100%
+    height: 60px
+    left: 0
+    z-index: 9999
+    background-color: #0F0F0F
+.burger-menu__button
+    position: fixed
+    right: 0
+    z-index: 30
+    width: 60px
+    height: 60px
+    transition: 0.4s
+.burger-menu__lines, .burger-menu__lines::after, .burger-menu__lines::before
+    position: absolute
+    width: 30px
+    height: 4px
+    background-color: #fff
+.burger-menu__lines
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+.burger-menu__lines::before
+    content: ''
+    top: -12px
+.burger-menu__lines::after
+    content: ''
+    top: 12px
+.burger-menu__active .burger-menu__lines
+    background-color: transparent
+.burger-menu__active .burger-menu__lines::after
+    top: 0
+    transform: rotate(45deg)
+.burger-menu__active .burger-menu__lines::before
+    top: 0
+    transform: rotate(-45deg)
+.burger-menu__nav
+    position: fixed
+    z-index: 20
+    display: flex
+    flex-flow: column
+    margin-top: 60px
+    height: 35%
+    width: 100%
+    background-color: #0F0F0F
+    overflow-y: auto
+    right: -100%
+    transition: 0.4s
+.burger-menu__active .burger-menu__nav
+    right: 0
+.burger-menu__link
+    text-align: right
+    padding: 10px
+    font-size: 13px
+    line-height: 18px
+    text-transform: uppercase
+    color: #969696
+    cursor: pointer
+.burger-menu__link:hover
+        transition: 150ms ease-in
+        color: #fff
+        background-color: #1F1F1F
+.burger-menu__overlay
+    display: none
+    position: fixed
+    top: 0
+    left: 0
+    width: 100vw
+    height: 100vh
+    z-index: 10
+.burger-menu__active .burger-menu__overlay
+    display: block
+.burger-menu__search
+    position: fixed
+    right: 120px
+    margin-top: 20px
+.burger-menu__bx
+    position: fixed
+    right: 70px
+    margin-top: 19px
+
 
 
         
