--- a/css/style.css
+++ b/css/style.css
@@ -754,7 +754,7 @@ p {
     margin-bottom: 100px; }
   .staging__wrap {
     margin-left: 150px;
-    max-width: 1750px; }
+    max-width: 1770px; }
 
 .slick-list {
   overflow: hidden; }
@@ -1170,5 +1170,71 @@ p {
 @media only screen and (max-width: 576px) {
   .container {
     margin: 0 23px; }
-  .header__wrapper {
-    margin-top: 114px; } }
+  .header {
+    height: 600px; }
+    .header__wrapper {
+      margin-top: 114px; }
+    .header__title {
+      letter-spacing: 6px; }
+  .theater {
+    margin-top: 80px; }
+    .theater__wrap {
+      flex-direction: column; }
+    .theater__description {
+      max-width: 505px;
+      text-align: center; }
+    .theater__heading {
+      margin-bottom: 40px;
+      text-align: center; }
+    .theater__text {
+      margin-bottom: 27px; }
+    .theater__icon {
+      margin: 0 auto;
+      max-width: 510px; }
+    .theater__block-wrap {
+      display: flex; }
+    .theater__block-one {
+      margin: 0 60px 0 76px; }
+    .theater__theater-icon {
+      margin: 0; }
+  .staging {
+    margin: 80px 0; }
+    .staging__wrapper {
+      margin: 0 23px; }
+  .stars__years {
+    margin-left: 33px; }
+  .stars__text {
+    margin: 0 33px 0 24px; }
+  .stars__description {
+    font-size: 25px; }
+  .partners {
+    margin-top: 80px; }
+    .partners__wrap {
+      max-width: 510px; }
+    .partners__title {
+      margin-bottom: 60px; }
+  .footer__maecenas {
+    max-width: 510px; }
+  .footer__block-one {
+    flex-wrap: wrap;
+    justify-content: space-between; }
+  .footer__contact {
+    margin-bottom: 60px; }
+  .footer__wrap {
+    max-width: 510px;
+    padding-bottom: 50px; }
+  .footer__input-group--one {
+    margin: 0; }
+  .footer__input {
+    width: 230px; }
+  .footer__input--primary {
+    width: 510px;
+    margin-top: 30px; }
+  .footer__block-two {
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center; }
+  .footer__policy {
+    margin-top: 30px;
+    text-align: center;
+    max-width: 435px; } }
