--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -176,8 +176,78 @@
     .container
         margin: 0 23px
     .header
+        height: 600px
         &__wrapper
             margin-top: 114px
+        &__title
+            letter-spacing: 6px
+    .theater
+        margin-top: 80px
+        &__wrap
+            flex-direction: column
+        &__description
+            max-width: 505px
+            text-align: center
+        &__heading
+            margin-bottom: 40px
+            text-align: center
+        &__text
+            margin-bottom: 27px
+        &__icon
+            margin: 0 auto
+            max-width: 510px
+        &__block-wrap
+            display: flex
+        &__block-one
+            margin: 0 60px 0 76px
+        &__theater-icon
+            margin: 0
+            
+    .staging
+        margin: 80px 0
+        &__wrapper
+            margin: 0 23px
+    .stars
+        &__years
+            margin-left: 33px
+        &__text
+            margin: 0 33px 0 24px
+        &__description
+            font-size: 25px
+    .partners
+        margin-top: 80px
+        &__wrap
+            max-width: 510px
+        &__title
+            margin-bottom: 60px
+    .footer
+        &__maecenas
+            max-width: 510px
+        &__block-one
+            flex-wrap: wrap
+            justify-content: space-between
+        &__contact
+            margin-bottom: 60px
+        &__wrap
+            max-width: 510px
+            padding-bottom: 50px
+        &__input-group--one
+            margin: 0
+        &__input
+            width: 230px
+        &__input--primary
+            width: 510px
+            margin-top: 30px
+        &__block-two
+            flex-direction: column-reverse
+            justify-content: center
+            align-items: center
+        &__policy
+            margin-top: 30px
+            text-align: center
+            max-width: 435px
+        
+
 
 
             
