--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -144,6 +144,7 @@
             margin-bottom: 60px
         &__wrap
             margin: 0 auto
+            max-width: 690px
         &__icon
             margin: 0 0 0 30px
     .staging
@@ -151,13 +152,19 @@
         &__wrapper
             margin: 0 29px
         &__wrap
-            margin: 0
+            margin: 0 auto
     .stars
         &__years
             margin: 0
             margin-left: 99px
+        &__wrap
+            justify-content: center
+        &__description
+            max-width: 450px
     .partners
         margin-top: 90px
+        &__wrap
+            margin: 0 auto
     .partners .slick-list
         padding: 0!important
     .partners .slick-slide
@@ -169,10 +176,10 @@
         &__title
             margin-bottom: 60px
         &__maecenas
-            margin: 0
+            margin: 0 auto
         &__dev
-            margin: 0
-@media only screen and (max-width: 576px)
+            margin: 0 auto
+@media only screen and (max-width: 767px)
     .container
         margin: 0 23px
     .header
@@ -186,13 +193,13 @@
         &__wrap
             flex-direction: column
         &__description
+            margin: 0 auto
             max-width: 505px
             text-align: center
+            margin-bottom: 27px
         &__heading
             margin-bottom: 40px
             text-align: center
-        &__text
-            margin-bottom: 27px
         &__icon
             margin: 0 auto
             max-width: 510px
@@ -201,8 +208,7 @@
         &__block-one
             margin: 0 60px 0 76px
         &__theater-icon
-            margin: 0
-            
+            margin: 0   
     .staging
         margin: 80px 0
         &__wrapper
@@ -242,11 +248,79 @@
             flex-direction: column-reverse
             justify-content: center
             align-items: center
+        &__dev
+            max-width: 510px
         &__policy
             margin-top: 30px
             text-align: center
             max-width: 435px
-        
+@media only screen and (max-width: 556px)
+        .title
+            font-size: 43px
+            letter-spacing: 3px
+            line-height: 60px
+            margin-bottom: 40px
+        .header
+            &__wrapper
+                margin-top: 85px
+            &__title
+                letter-spacing: 3px
+                font-size: 54px
+                line-height: 58px
+        .theater
+            margin-top: 60px
+            &__block-wrap
+                justify-content: center
+                align-items: flex-start
+            &__block-one
+                margin-left: 0
+            &__heading
+                margin-bottom: 25px
+        .staging
+            margin-top: 60px
+            margin-bottom: 60px
+        .stars
+            &__wrap
+                flex-direction: column
+            &__years
+                margin: 0 0 25px 0
+            &__text
+                align-items: center
+                justify-content: center
+                text-align: center
+                margin: 0
+            &__star
+                margin-bottom: 10px
+                margin-right: 10px
+        .partners .slick-slide
+            max-width: 100%
+            margin-right: 0
+        .partners__slider-item
+            text-align: center
+        .footer
+            &__maecenas
+                max-width: 254px
+            &__input
+                width: 254px
+            &__input-group--one
+                margin-bottom: 30px
+            &__input--primary
+                margin-top: 0
+            &__contact
+                flex-direction: column
+                align-items: center
+                margin-bottom: 40px
+            &__phone
+                text-align: center
+            &__dev
+                flex-direction: column
+                justify-content: center
+                align-items: center
+            &__text
+                text-align: center
+                font-size: 11px
+                margin-bottom: 10px
+
 
 
 
