--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -267,10 +267,15 @@
                 letter-spacing: 3px
                 font-size: 54px
                 line-height: 58px
+        .burger-menu__nav
+            width: 100%
+        .burger-menu__link
+            margin: 0 0 35px 0
+            text-align: center
         .theater
             margin-top: 60px
             &__block-wrap
-                justify-content: center
+                justify-content: space-around
                 align-items: flex-start
             &__block-one
                 margin-left: 0
@@ -279,6 +284,15 @@
         .staging
             margin-top: 60px
             margin-bottom: 60px
+            &__item
+                max-width: 254px
+                height: 316px
+            &__heading
+                top: 20px
+                left: 20px
+            &__subtitle
+                left: -30px
+                bottom: 70px
         .stars
             &__wrap
                 flex-direction: column
