fix burger menu

--- a/css/style.css
+++ b/css/style.css
@@ -1265,6 +1265,9 @@ p {
   .burger-menu__link {
     margin: 0 0 35px 0;
     text-align: center; }
+  .close {
+    margin: 0 auto;
+    padding: 30px 0 78px 0; }
   .theater {
     margin-top: 60px; }
     .theater__block-wrap {
