--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -272,6 +272,9 @@
         .burger-menu__link
             margin: 0 0 35px 0
             text-align: center
+        .close
+            margin: 0 auto
+            padding: 30px 0 78px 0
         .theater
             margin-top: 60px
             &__block-wrap
