--- a/css/style.css
+++ b/css/style.css
@@ -1007,6 +1007,9 @@ p {
   font-size: 12px;
   line-height: 150%; }
 
+::-moz-placeholder {
+  line-height: 32px; }
+
 @media screen and (max-width: 1400px) {
   .container {
     margin: 0 0 0 150px; }
@@ -1248,7 +1251,7 @@ p {
     text-align: center;
     max-width: 435px; } }
 
-@media only screen and (max-width: 556px) {
+@media only screen and (max-width: 567px) {
   .title {
     font-size: 43px;
     letter-spacing: 3px;
@@ -1307,13 +1310,35 @@ p {
   .partners__slider-item {
     text-align: center; }
   .footer__maecenas {
+    max-width: 338px; }
+  .footer__wrap {
+    max-width: 338px; }
+  .footer__input {
+    width: 150px; }
+  .footer__input--primary {
+    width: 338px; }
+  .footer__contact {
+    margin-bottom: 40px; }
+  .footer__phone {
+    font-size: 13px;
+    line-height: 12px; }
+  .footer__dev {
+    align-items: flex-start;
+    justify-content: space-between;
+    margin: 0; }
+  .footer__text {
+    font-size: 10px;
+    margin-bottom: 10px; } }
+
+@media only screen and (max-width: 420px) {
+  .footer__maecenas {
+    max-width: 254px; }
+  .footer__wrap {
     max-width: 254px; }
   .footer__input {
-    width: 254px; }
-  .footer__input-group--one {
-    margin-bottom: 30px; }
+    width: 120px; }
   .footer__input--primary {
-    margin-top: 0; }
+    width: 254px; }
   .footer__contact {
     flex-direction: column;
     align-items: center;
