--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -103,3 +103,18 @@
         font-weight: 600
         font-size: 12px
         line-height: 150%
+::-moz-placeholder 
+    line-height: 32px
+
+
+
+
+
+
+
+
+
+
+
+        
+        
