--- a/sass/templates/_footer.sass
+++ b/sass/templates/_footer.sass
@@ -99,7 +99,7 @@
         color: #989898
 ::placeholder
         color: #989898
-        font-family: Open Sans
+        font-family: Open Sans Semi
         font-weight: 600
         font-size: 12px
         line-height: 150%
