--- a/sass/templates/_stars.sass
+++ b/sass/templates/_stars.sass
@@ -30,6 +30,7 @@
         margin-right: 21px
         margin-bottom: 25px
     &__description
+        font-family: Open Sans Bold
         font-weight: bold
         font-size: 36px
         line-height: 150%
